# python-libremarkable

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  test.py
.github/workflows/: build.yaml
examples/: drawing.py  events.py  keyboard.py  screen_update.py
libremarkable/: __init__.py  _color.py  _device.py  _framebuffer.py  _geometry.py  _input.py  _ioctl.py  _keymap.py  _libc.py  _mxcfb.py  _rm2fb.py  geometry.py
